@@ -6,6 +6,7 @@ v 8.5.0 (unreleased)
   - Upgrade gitlab_git to 7.2.23 to fix commit message mentions in first branch push
   - New UI for pagination
   - Fix diff comments loaded by AJAX to load comment with diff in discussion tab
+  - Whitelist raw "abbr" elements when parsing Markdown (Benedict Etzel)
 
 v 8.4.0
   - Allow LDAP users to change their email if it was not set by the LDAP server
